some more training in css and html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,43 @@
       <img src="http://via.placeholder.com/50" alt="" class="avatar">
       <span class="mybadge badge badge-dark ">4</span>
     </div>
+    <br><hr>
 
+    <div class="flex">
+      <img src="http://via.placeholder.com/50" alt="" id="flex-item1">
+      <img src="http://via.placeholder.com/50" alt="" id="flex-item2">
+      <img src="http://via.placeholder.com/50" alt="" id="flex-item3">
+    </div>
+    <br><hr>
+
+  <h2>Banner</h2>
+    <div class="banner">
+      <div class="banner-content">
+        <h1>Stripe</h1>
+        <p>Nice stuff</p>
+        <h2>Button design</h2>
+        <a href="#" class="bn-medium">SIGN UP</a>
+        <br><hr>
+      </div>
+    </div><br><hr>
+
+    <h2>Tab design</h2>
+    <div class="tabs">
+
+      <div class="tab-item active">
+        <h3>75</h3><p>Upvoted</p>
+      </div>
+      <div class="tab-item">
+        <h3>75</h3><p>Upvoted</p>
+      </div>
+      <div class="tab-item">
+        <h3>75</h3><p>Upvoted</p>
+      </div>
+      <div class="tab-item">
+        <h3>75</h3><p>Upvoted</p>
+      </div>
+
+    </div><br><hr>
 
 
 
