--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <!-- Bootstrap-->
+<script src="https://kit.fontawesome.com/215094472f.js"></script>
 
     <title></title>
 
@@ -108,7 +109,59 @@
         <h3>75</h3><p>Upvoted</p>
       </div>
 
-    </div><br><hr>
+    </div>
+
+
+    <h2>Product design</h2>
+    <div class="product">
+      <div class="product-upvotes">
+        <i class="fa fa-caret-up product-controls"></i>
+        <p>21</p>
+      </div>
+      <img src="https://picsum.photos/200/150" alt="" class="product-image rounded">
+      <div class="product-description">
+        <h3>Intercom</h3>
+        <p>Cool CRM Service</p>
+      </div>
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="#" class="fa fa-heart product-controls"></a> </li>
+        <li class="list-inline-item"><a href="#" class="fa fa-share product-controls"></a> </li>
+        <li class="list-inline-item"><a href="#" class="fa fa-star product-controls"></a> </li>
+      </ul>
+    </div>
+    <div class="product">
+      <div class="product-upvotes">
+        <i class="fa fa-caret-up product-controls"></i>
+        <p>21</p>
+      </div>
+      <img src="https://picsum.photos/200/150" alt="" class="product-image rounded">
+      <div class="product-description">
+        <h3>Intercom</h3>
+        <p>Cool CRM Service</p>
+      </div>
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="#" class="fa fa-heart product-controls"></a> </li>
+        <li class="list-inline-item"><a href="#" class="fa fa-share product-controls"></a> </li>
+        <li class="list-inline-item"><a href="#" class="fa fa-star product-controls"></a> </li>
+      </ul>
+    </div>
+    <div class="product">
+      <div class="product-upvotes">
+        <i class="fa fa-caret-up product-controls"></i>
+        <p>21</p>
+      </div>
+      <img src="https://picsum.photos/200/150" alt="" class="product-image rounded">
+      <div class="product-description">
+        <h3>Intercom</h3>
+        <p>Cool CRM Service</p>
+      </div>
+      <ul class="list-inline">
+        <li class="list-inline-item"><a href="#" class="fa fa-heart product-controls"></a> </li>
+        <li class="list-inline-item"><a href="#" class="fa fa-share product-controls"></a> </li>
+        <li class="list-inline-item"><a href="#" class="fa fa-star product-controls"></a> </li>
+      </ul>
+    </div>
+
 
 
 
