--- a/index.html
+++ b/index.html
@@ -163,6 +163,37 @@
     </div>
 
 
+    <div class="frosted">
+      <div class="frostedwindow">
+        <div class="frostedcontent">
+          <img src="https://hashnode.imgix.net/res/hashnode/image/upload/v1od0dgkashxlflchaby/1487739833.jpg" alt="" class="avatar1">
+          <form>
+            <div class="form-group">
+  <label for="exampleInputEmail1">Email address</label>
+  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+</div>
+            <div class="form-group">
+  <label for="exampleInputPassword1">Password</label>
+  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+</div>
+            <div class="form-group form-check">
+  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+  <label class="form-check-label" for="exampleCheck1">Stay logged in</label>
+</div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+
+        </div>
+      </div>
+    </div>
+
+
+    <br><hr>
+
+    <span class="ribbon">Notice where the orange box is.</span>
+
+
 
 
 
