--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </p>
           <br />
           <p class="w3-text-grey">
-            Business Development & Strategy | Design Thinking | Holacracy |
+            Business Development & Strategy | Strategic Advisory | Partnership Management | Social Entrepreneurship | KPI Research | Design Thinking | Holacracy |
             Serious Play | Lean Development | Intrapreneurship | Visual
             Analytics | Finance | Applied Data Science | Predictive Modeling |
             Data Visualization | DataMining | Statistical Analytics
