--- a/index.html
+++ b/index.html
@@ -3,6 +3,31 @@
   <head>
     <title>Harman Consulting</title>
     <meta charset="UTF-8" />
+    <meta http-equiv="cache-control" content="no-cache">
+    <meta name="keywords" content="Business Development, Strategy, Strategic Advisory, Marketing, Partnership Management, Social Entrepreneurship, KPI Research, Design Thinking, Holacracy,
+    Serious Play, Lean Development, Intrapreneurship, Sustainability, Visual
+    Analytics, Finance, Applied Data Science, Predictive Modeling,
+    Data Visualization, DataMining, Statistical Analytics">
+    <meta name="page-topic" content="Business Consulting">
+    <meta name="publisher" content="Ozan Harman">
+    <meta name="ROBOTS" content="Index, ALL">
+    <meta name="description" content="We can help you to setup, realign, and pivot your business strategy. ">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="http://harman.space">
+<meta property="og:title" content="Harman Consulting">
+<meta property="og:description" content="We can help you to setup, realign, and pivot your business strategy. ">
+<meta property="og:image" content="IMG/meta.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="http://harman.space">
+<meta property="twitter:title" content="Harman Consulting">
+<meta property="twitter:description" content="We can help you to setup, realign, and pivot your business strategy. ">
+<meta property="twitter:image" content="IMG/meta.jpg">
+
+
 
     <link
       rel="apple-touch-icon"
@@ -167,8 +192,8 @@
           </p>
           <br />
           <p class="w3-text-grey">
-            Business Development & Strategy | Strategic Advisory | Partnership Management | Social Entrepreneurship | KPI Research | Design Thinking | Holacracy |
-            Serious Play | Lean Development | Intrapreneurship | Visual
+            Business Development & Strategy | Strategic Advisory | Marketing | Partnership Management | Social Entrepreneurship | KPI Research | Design Thinking | Holacracy |
+            Serious Play | Lean Development | Intrapreneurship | Sustainability | Visual
             Analytics | Finance | Applied Data Science | Predictive Modeling |
             Data Visualization | DataMining | Statistical Analytics
           </p>
