--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Harman Consulting</title>
     <meta charset="UTF-8" />
     <meta http-equiv="cache-control" content="no-cache">
-    <meta name="keywords" content="Business Development, Strategy, Strategic Advisory, Marketing, Partnership Management, Social Entrepreneurship, KPI Research, Design Thinking, Holacracy,
+    <meta name="keywords" content="Business Development, Circular Economy, Strategy, Strategic Advisory, Marketing, Partnership Management, Social Entrepreneurship, KPI Research, Design Thinking, Holacracy,
     Serious Play, Lean Development, Intrapreneurship, Sustainability, Visual
     Analytics, Finance, Applied Data Science, Predictive Modeling,
     Data Visualization, DataMining, Statistical Analytics">
@@ -232,7 +232,7 @@
           </p>
           <br />
           <p class="w3-text-grey">
-            Business Development & Strategy | Strategic Advisory | Marketing | Partnership Management | Social Entrepreneurship | KPI Research | Design Thinking | Holacracy |
+            Business Development & Strategy | Strategic Advisory | Circular Economy | Marketing | Partnership Management | Social Entrepreneurship | KPI Research | Design Thinking | Holacracy |
             Serious Play | Lean Development | Intrapreneurship | Sustainability | Visual
             Analytics | Finance | Applied Data Science | Predictive Modeling |
             Data Visualization | DataMining | Statistical Analytics
